# fdedup

./: Cargo.toml  Makefile  README.rst
src/: err_macro.rs  lib.rs  main.rs
src/args/: mod.rs  parse.rs
src/dups/: dedup.rs  eval.rs  heuristics.rs  mod.rs  search.rs
src/fs_entry/: mod.rs  search.rs  search_state.rs
src/utils/: mod.rs  path.rs  progress.rs
tests/: test_dedup.rs  test_duplicate_search.rs  test_file_collection.rs
tests/utils/: fs_skel.rs  mod.rs
