[package]
name        = "fdedup"
version     = "0.1.0"
authors     = ["Dmitrii Torbunov <torbu001@umn.edu>"]
license     = "ISC"
description = "File Deduplicator"

[dependencies]
crypto-hash = "^0.3.4"           # Hashes (MD5, SHA*)
env_logger  = "^0.7.1"           # Env Logger
globset     = "^0.4.5"           # Glob matcher
indicatif   = "^0.15.0"          # Progress Bar, Spinners
log         = "^0.4.11"          # Logger Framework
humanize-rs = "^0.1.5"           # Parsing human bytes
fastrand    = "^1.3.5"           # Fast PRG

[dependencies.clap]
version = "^2.33.3"              # Cmdarg parser
default-features = false

[dev-dependencies]
tempfile    = "^3.1.0"           # For temporary directories for tests

